# Streamger

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  test.txt
backend/src/: handlers.rs  main.rs  models.rs  state.rs
frontend/: .cta.json  .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/: routeTree.gen.ts  types.ts
frontend/src/components/: Coming.tsx  Grid_MovieList.tsx  Header.tsx  Hero.tsx  MovieCard.tsx  MovieList.tsx  Now_playing.tsx  Pagination.tsx  Popular_tv_shows.tsx  Searchbar.tsx  Top_rated_movies.tsx  TrendingNow.tsx  VideoPlayer.tsx
frontend/src/lib/: movies.server.ts
frontend/src/routes/: __root.tsx  index.tsx  now-playing.tsx  popular-tv-shows.tsx  search.tsx  top-rated-movies.tsx  trending.tsx  upcoming.tsx
