[package]
name = "axum_streamger"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
reqwest = { version = "0.13.1", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
